--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -30,10 +30,9 @@ jobs:
     - run: npm run build --if-present
     - run: npm test
 
-    # Add the deployment step here
     - name: Deploy with gh-pages
       run: |
-        git remote set-url origin https://github.com/${GITHUB_REPOSITORY}.git
-        git config --global user.name "github-actions"
-        git config --global user.email "github-actions@github.com"
+        git remote set-url origin https://git:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git
         npm run deploy -- -u "github-actions-bot <support+actions@github.com>"
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
